<resources>
    <string name="app_name">Popular Movies</string>
    <string name="connection_problem">Connection Problem.</string>
    <string name="storyline">Storyline</string>
    <string name="title">Movie</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="filmography">Filmography</string>
    <string name="biography">Biography</string>
    <string name="director">Director:</string>
    <string name="producer">Producer:</string>
    <string name="user_score">User Score:</string>
    <string name="running_time">Running Time:</string>
    <string name="release_date">Release Date:</string>
    <string name="mpaa_rating">MPAA Rating:</string>
    <string name="cast">Cast</string>
    <string name="play">Play</string>
    <string name="open_with">Open with</string>
    <string name="similar_movies">Similar movies</string>
</resources>