<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.personDetails.PersonDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress_bar_person"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:indeterminateTint="@color/white"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txt_error_person"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text="@string/connection_problem"
            android:textColor="@color/white"
            android:visibility="gone" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/iv_person_image"
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="center"
                        android:scaleType="matrix"
                        app:riv_border_width="0dp"
                        app:riv_corner_radius="0dp"
                        app:riv_mutate_background="true"
                        app:riv_oval="false" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="400dp"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/image_gradient"
                        android:orientation="horizontal" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/person_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/name"
                            android:textColor="@color/white"
                            android:textSize="30sp" />

                        <TextView
                            android:id="@+id/date_of_birth"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:layout_marginBottom="18dp"
                            android:fontFamily="@font/montserrat_regular"
                            android:text="@string/date_of_birth"
                            android:textColor="@color/white"
                            android:textSize="16sp" />

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>